--- a/WebAuLac/Views/LichKiemTraTaus/dsDuTru.cshtml
+++ b/WebAuLac/Views/LichKiemTraTaus/dsDuTru.cshtml
@@ -1,8 +1,9 @@
 ﻿@model IEnumerable<WebAuLac.Models.sp_T_LayNguoiThayThe_Result>
+<p id="dsDuTru_tieuDe" class="noibat"></p>
 <table id="tblDuTru" class="table table-bordered table-hover table-striped">
     <thead>
         <tr>
-            <th></th>            
+            <th></th>
             <th>
                 Họ tên
             </th>
