--- a/WebAuLac/Views/LichKiemTras/Index.cshtml
+++ b/WebAuLac/Views/LichKiemTras/Index.cshtml
@@ -15,7 +15,9 @@
 
 <p>
     <a data-modal href="@Url.Action("Create", "LichKiemTras")" class="btn btn-primary"><i class="fa fa-plus m-right-xs"></i>Thêm mới</a>
+    <a href="@Url.Action("LichTheoPhongBan", "LichKiemTras")" class="btn btn-info"><i class="fa fa-info m-right-xs"></i>Xem theo đơn vị</a>
 </p>
+
 <table id="PlanList" class="table table-bordered table-hover table-striped">
     <thead>
         <tr>
@@ -24,7 +26,7 @@
                 Đơn vị
             </th>
             <th>
-               T 1
+                T 1
             </th>
             <th>
                 T 2
@@ -81,7 +83,7 @@
                         //tháng 1
                         for (int i = 1; i <= 12; i++)
                         {
-                            var listKiemTra = Model.Where(x => x.Thang == i && x.DepartmentID==id);
+                            var listKiemTra = Model.Where(x => x.Thang == i && x.DepartmentID == id);
                             if (listKiemTra != null)
                             {
                                 string chiTiet = "";
@@ -92,16 +94,18 @@
                                     if (isFirst)
                                     {
                                         isFirst = false;
-                                    }else
+                                    }
+                                    else
                                     {
                                         chiTiet += ", ";
                                     }
                                     if (item.Ngay.HasValue)
                                     {
                                         thongTin = item.LoaiKiemTra.VietTat + "(" + item.Ngay.Value.ToString() + ")";
-                                    }else
+                                    }
+                                    else
                                     {
-                                        thongTin= item.LoaiKiemTra.VietTat;
+                                        thongTin = item.LoaiKiemTra.VietTat;
                                     }
                                     if (User.IsInRole("HR"))
                                     {
@@ -123,11 +127,11 @@
                         }
                     }
                 </tr>
-             }
+            }
         }
     </tbody>
-
 </table>
+
 @section Styles{
     @Styles.Render("~/vendors/DataTables/css")
     @Styles.Render("~/vendors/DataTables/Buttons/css")
@@ -141,8 +145,8 @@
 
     <script language="javascript">
         $(document).ready(function () {
-            $('a[name=link_popover]').popover({               
-               
+            $('a[name=link_popover]').popover({
+
             });
             var t = $('#PlanList').DataTable({
                 "language": {
